--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,1 +1,15 @@
-<h1> Hello Pitches </h1>
+{% import 'macros.html' as macros %}
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        {% if title %}
+        <title> {{ title }}</title>
+        {% else %}
+        <title> Welcome to the Pitches website </title>
+        {% endif %}
+    </head>
+    <body>
+
+    </body>
+</html>
