--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,15 +1,6 @@
 {% import 'macros.html' as macros %}
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        {% if title %}
-        <title> {{ title }}</title>
-        {% else %}
-        <title> Welcome to the Pitches website </title>
-        {% endif %}
-    </head>
-    <body>
-
-    </body>
-</html>
+{% block styles%} 
+    {{ super() }}
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Aclonica"/>
+    <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}"> 
+{% endblock %}
