--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,22 @@
+{% extends 'base.html' %}
 {% import 'macros.html' as macros %}
-{% block styles%} 
+{% block styles %} 
     {{ super() }}
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Aclonica"/>
     <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}"> 
 {% endblock %}
+
+
+{% block content %}
+
+<div class="container" style="font-family: Aclonica">
+
+    {% if current_user.is_authenticated%}
+        <h1>Hello {{current_user.username}}</h1>
+        <h3>Welcome to 60secs Pitch</h3>
+    {% else %}
+        <h1>Hi new person</h1>
+    {%endif%}
+</div>
+
+{% endblock%}
