--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,6 +1,6 @@
 {% macro displayPitches(all_pitches) %}
     {%if all_pitches%}
-       {% for pitch in all_pitches}
+       {% for pitch in all_pitches %}
        <div class="row">
         <div class="col-sm-12">
             <div class="card">
