--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -22,7 +22,7 @@
   
                  {% else %}
                  <a class="nav-item nav-link brand" href="/">Home</a>
-                 <li><a class="nav-item nav-link brand" href="{{url_for('auth.login')}}">Login</a></li>
+                 <li><a class="nav-item nav-link brand" href="{{url_for('auth.login')}}">sign in</a></li>
                   <li><a class="nav-item nav-link brand" href="{{url_for('auth.register')}}">Register</a><li>
                  {%endif%}
                <!-- </ul> -->
